--- a/eoc-cluster/flux-system/gitops-demo-kustomization.yaml
+++ b/eoc-cluster/flux-system/gitops-demo-kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m0s
-  path: ./flux-config
+  path: ./eoc-cluster/flux-system/
   prune: true
   sourceRef:
     kind: GitRepository
